update 08_position_subtype_HLA, fix subtype rank column

--- a/08_position_subtype_HLA/Position_regression.html
+++ b/08_position_subtype_HLA/Position_regression.html
@@ -366,7 +366,7 @@ pre code {
 </div>
 
 
-<p>Report generated at: 03/15/2023 03:59 PM PDT</p>
+<p>Report generated at: 03/15/2023 04:19 PM PDT</p>
 <div id="meaning-of-correlation_data.csv" class="section level2">
 <h2>Meaning of correlation_data.csv</h2>
 <ul>
@@ -389,23 +389,23 @@ subtypes and mutations &gt;= 0.1% in any subtype.
 ## 
 ## Residuals:
 ##      Min       1Q   Median       3Q      Max 
-## -0.63064 -0.12129  0.04776  0.04776  1.20449 
+## -0.49054 -0.12676  0.05899  0.05899  1.08086 
 ## 
 ## Coefficients:
-##               Estimate Std. Error t value Pr(&gt;|t|)    
-## (Intercept)  -0.050997   0.023846  -2.139   0.0335 *  
-## subtype_rank  0.001616   0.000244   6.622 2.51e-10 ***
-## HLA           0.116175   0.011516  10.088  &lt; 2e-16 ***
+##                Estimate Std. Error t value Pr(&gt;|t|)    
+## (Intercept)  -0.0649727  0.0179847  -3.613 0.000373 ***
+## subtype_rank  0.0059825  0.0004743  12.614  &lt; 2e-16 ***
+## HLA           0.0695970  0.0105914   6.571 3.35e-10 ***
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
-## Residual standard error: 0.2477 on 228 degrees of freedom
-## Multiple R-squared:  0.6318, Adjusted R-squared:  0.6286 
-## F-statistic: 195.6 on 2 and 228 DF,  p-value: &lt; 2.2e-16</code></pre>
+## Residual standard error: 0.2075 on 228 degrees of freedom
+## Multiple R-squared:  0.7414, Adjusted R-squared:  0.7391 
+## F-statistic: 326.8 on 2 and 228 DF,  p-value: &lt; 2.2e-16</code></pre>
 <pre><code>##                     2.5 %       97.5 %
-## (Intercept)  -0.097984402 -0.004009202
-## subtype_rank  0.001135112  0.002096718
-## HLA           0.093484362  0.138866266</code></pre>
+## (Intercept)  -0.100410075 -0.029535301
+## subtype_rank  0.005047985  0.006917091
+## HLA           0.048727501  0.090466598</code></pre>
 </div>
 <div id="subtype-chi-square-test-rank-and-hla-reference-with-interaction-regression" class="section level2">
 <h2>Subtype chi-square test rank and #HLA Reference with interaction,
@@ -416,25 +416,25 @@ regression</h2>
 ## 
 ## Residuals:
 ##      Min       1Q   Median       3Q      Max 
-## -0.57387 -0.12035  0.02421  0.02421  1.12006 
+## -0.49577 -0.06789  0.02419  0.02419  1.05375 
 ## 
 ## Coefficients:
 ##                    Estimate Std. Error t value Pr(&gt;|t|)    
-## (Intercept)      -0.0273060  0.0190108  -1.436    0.152    
-## subtype_rank      0.0015486  0.0001935   8.003 6.22e-14 ***
-## HLA              -0.4757497  0.0515918  -9.221  &lt; 2e-16 ***
-## subtype_rank:HLA  0.0029941  0.0002568  11.657  &lt; 2e-16 ***
+## (Intercept)      -0.0290519  0.0157400  -1.846   0.0662 .  
+## subtype_rank      0.0048617  0.0004199  11.578  &lt; 2e-16 ***
+## HLA              -0.1266590  0.0226494  -5.592 6.42e-08 ***
+## subtype_rank:HLA  0.0022689  0.0002403   9.441  &lt; 2e-16 ***
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
-## Residual standard error: 0.1963 on 227 degrees of freedom
-## Multiple R-squared:  0.7697, Adjusted R-squared:  0.7666 
-## F-statistic: 252.8 on 3 and 227 DF,  p-value: &lt; 2.2e-16</code></pre>
+## Residual standard error: 0.1763 on 227 degrees of freedom
+## Multiple R-squared:  0.8143, Adjusted R-squared:  0.8119 
+## F-statistic: 331.8 on 3 and 227 DF,  p-value: &lt; 2.2e-16</code></pre>
 <pre><code>##                         2.5 %       97.5 %
-## (Intercept)      -0.064766143  0.010154241
-## subtype_rank      0.001167346  0.001929919
-## HLA              -0.577409861 -0.374089615
-## subtype_rank:HLA  0.002488011  0.003500237</code></pre>
+## (Intercept)      -0.060067012  0.001963226
+## subtype_rank      0.004034310  0.005689167
+## HLA              -0.171288986 -0.082028922
+## subtype_rank:HLA  0.001795338  0.002742393</code></pre>
 </div>
 <div id="subtype-chi-square-test-and-hla-reference-rfit" class="section level2">
 <h2>Subtype chi-square test and #HLA Reference, Rfit</h2>
